# elasticlog

./: CMakeLists.txt  README.md  build.sh  circle.yml  init_ut_env.sh  run_ut.sh
src/: CMakeLists.txt  flags.cc
src/agent/: CMakeLists.txt  ellet_impl.cc  ellet_impl.h  ellet_main.cc  file_utils.cc  file_utils.h  test_ellet_impl.cc
src/cmd/: CMakeLists.txt  cmd.cc
src/common/: CMakeLists.txt  common.cc  common.h  file_utils.h
src/core/: CMakeLists.txt  base_appender.cc  base_appender.h  index_appender.cc  index_appender.h  segment_appender.cc  segment_appender.h  segment_codec.h  segment_indexer.cc  segment_indexer.h  segment_reader.cc  segment_reader.h  test_segment_appender.cc
src/master/: CMakeLists.txt  master_impl.cc  master_impl.h  master_main.cc
src/proto/: CMakeLists.txt  el.proto  ellet.proto  elmaster.proto  hello.proto
src/rpc/: rpc_client.h
