cmake_minimum_required(VERSION 2.8)
PROJECT(el)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
INCLUDE_DIRECTORIES(/usr/include /usr/local/include ${PROJECT_SOURCE_DIR}/thirdparty/include)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/thirdparty/lib /usr/lib /usr/local/lib)
ADD_SUBDIRECTORY(src)
